--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-navbar></app-navbar>
+<app-navbar id="sho"></app-navbar>
 <router-outlet></router-outlet>
-<app-footer *ngIf="removeFooter()"></app-footer>
+<app-footer *ngIf="removeFooter()" id="sho"></app-footer>
