--- a/src/assets/sass/paper-kit/_carousel.scss
+++ b/src/assets/sass/paper-kit/_carousel.scss
@@ -76,7 +76,7 @@
 .carousel-inner{
     .carousel-item{
         img{
-            border-radius: $border-radius-extreme;
+            // border-radius: $border-radius-extreme;
             box-shadow: 0 2px 2px rgba(204, 197, 185, 0.5);
             height: 400px;
             width: 100%;
