--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,24 +1,38 @@
-<main class="">
-    <div class="container-fluid" style="margin-top: 100px;">
-        <ngb-carousel *ngIf="images">
-            <ng-template ngbSlide>
-              <div class="picsum-img-wrapper">
-                <img [src]="images[0]" alt="Random first slide">
+
+  <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
+      <div class="filter"></div>
+      <div class="content-center">
+          <div class="container">
+              <div class="title-brand">
+                  <!-- <div class="angular-logo">
+                      <img src="assets/img/angular2-logo.png" alt="">
+                  </div> -->
+                  <small>THE LIQUID LOVE EFFECT</small>
+                  <h4 class="presentation-title">Because he hath set his love upon me, therefore will I deliver him:
+                    I will set him on high, because he hath known my name. - Psalm 91:14</h4>
+                  <div class="fog-low">
+                      <img src="assets/img/fog-low.png" alt="">
+                  </div>
+                  <div class="fog-low right">
+                      <img src="assets/img/fog-low.png" alt="">
+                  </div>
+                  <br>
+                  <br>
+                  <p class="but text-center"><a href="#" class="header-but">EXPERIENCE THE FATHER'S LOVE</a></p>
               </div>
-              <div class="carousel-caption">
-                <h3>10 seconds between slides...</h3>
-                <p>This carousel uses customized default values.</p>
-              </div>
-            </ng-template>
-          </ngb-carousel>
-          
+
+              
+          </div>
       </div>
+      <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
 
-
-  <section>
+  </div>
+ 
+  <div class="divs">
     <div class="container">
         <div class="text-center">
             <h3 class="mb-2">WELCOME TO LAPIS LAZULI MINISTRIES</h3>
+            <br>
             <p>Lapis Lazuli Ministries exists to awaken the body of 
                 Christ to the extravagant love of God the Father. Lapis Lazuli Ministries aims to achieve our mission by coming
                 alongside bodies of believers and  encouraging training through
@@ -26,35 +40,156 @@
                 life of Jesus Christ as modelled by Him.</p>
         </div>
     </div>
-  </section>
+</div>
 
 
-  <section>
+  <div class="divs bg-grey">
       <div class="container">
           <div class="row">
-              <div class="col-md-12 text-center">
-                  <h3>A VISION, A MISSION, A MINISTRY</h3>
-                  <p>Lapis Lazuli ministry is a vessel that seeks to carry these foundational truths 
-                    out into the four corners of the world. It restores lives by reconnecting hearts
-                    back to the extravagant love of The Father,raising up generations by repairing 
-                    faulty foundations, uniting churches and ministeries, by breaking down walls to
-                    celebrating all that unite, and in this way,
-                    impact the spiritual state of Nations.</p>
-                    <p><a href="">MORE ABOUT OUR MISSION</a></p>
-              </div>
+            <div class="col-md-6">
+
+               <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card" id="card1" style="width: 15rem; height: 15rem;">
+                            <div class="layer">
+                            </div>
+                        <div class="card-body">
+                            <i class="fa fa-heart"></i>
+                          <h5 class="card-titles">RESPOND TO GOD'S LOVE</h5>
+                         
+                          <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card" id="card2" style="width: 15rem; height: 15rem;">
+                            <div class="layer">
+                            </div>
+                        <div class="card-body">
+                            <i class="fa fa-book"></i>
+                          <h5 class="card-titles">EMPOWERED BY THE HOLY SPIRIT</h5>
+                         
+                          <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card" id="card3" style="width: 15rem; height: 15rem;">
+                            <div class="layer">
+                            </div>
+                        <div class="card-body">
+                            <i class="fa fa-heart"></i>
+                          <h5 class="card-titles">PREPARING THE BRIDE</h5>
+                         
+                          <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card" id="card4" style="width: 15rem; height: 15rem;">
+                            <div class="layer">
+                            </div>
+                        <div class="card-body">
+                            <i class="fa fa-book"></i>
+                          <h5 class="card-titles">SHARING JESUS</h5>
+                         
+                          <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+               </div>
+
+            </div>
+            <div class="col-md-6">
+                <h3 class="text-underline text-left">A VISION, A MISSION, A MINISTRY</h3>
+                <p>Lapis Lazuli ministry is a vessel that seeks to carry these foundational truths 
+                  out into the four corners of the world. It restores lives by reconnecting hearts
+                  back to the extravagant love of The Father,raising up generations by repairing 
+                  faulty foundations, uniting churches and ministeries, by breaking down walls to
+                  celebrating all that unite, and in this way,
+                  impact the spiritual state of Nations.</p>
+                  <p class="but mt-2"><a href="" class="">MORE ABOUT OUR MISSION</a></p>
+            </div>
 
           </div>
       </div>
-  </section>
+    </div>
 
-  <section>
-      <div class="text-center">
-          <h3>CONFERENCES & EVENTS</h3>
-          <p>Catch up on our latest events and conferences</p>
+  <div class="divs">
+      <div class="container">
+          <h3 class="text-center">CONFERENCES & EVENTS</h3>
+          <p class="text-center">Catch up on our latest events and conferences</p>
+          <p class="text-center">Loading...</p>
           <div class="row">
               <div class="col-md-4"></div>
               <div class="col-md-4"></div>
+              <div class="col-md-4"></div>
           </div>
       </div>
-  </section>
-</main>
+    </div>
+
+  <div class="divs bg-grey">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h5>LAPIS LM RADIO</h5>
+                <h3>Uninterrupted worship, teaching, 
+                  prayer and so much more! 🎙️</h3>
+                  <p>We earnestly look forward to the great and mighty 
+                      things the Lord will do through the Lapis LM Radio vision
+                      into which He has called us 🙏
+                      God Bless You</p>
+            </div>
+            <div class="col-md-4">
+                <img src="" alt="">
+                
+            </div>
+            <div class="col-md-4">
+                <iframe frameborder="0" width="280" height="216" src="https://llmradio.com/embed/player?stream=auto&amp;title=Now Playing"></iframe>
+            </div>
+    </div>
+      </div>
+    </div>
+  <div class="divs">
+      <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div>
+                    <h3>Christian Healing Certification 
+                      Program (CHCP)</h3>
+                      <p>CHCP presents a practical, theologically grounded option for anyone 
+                          looking to expand their ministry training. CHCP embraces a holistic
+                          approach, providing a hands-on experience for anyone with an interest
+                          in Physical Healing, Inner Healing or Deliverance.</p>
+                          <p class="but mt-2"><a href="">Learn more</a></p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/lMBALbd6ADU?start=9" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+      </div>
+    </div>
+  <div class="divs bg-grey" id="app">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4">
+                  <h3>LAPIS LM MOBILE APP</h3>
+                  <p>Our app connects you to a variety of resources, including sermons, music, articles,
+                    event info, and more.</p>
+                <img src="./assets/img/app-store.png" alt="">
+              </div>
+              <div class="col-md-4">
+                <!-- <img src="./assets/img/app.png" height="400px" alt=""> -->
+              </div>
+              <div class="col-md-4">
+                <img src="./assets/img/app.png" height="400px" alt="">
+              </div>
+          </div>
+      </div>
+    </div>
+
