--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -1,10 +1,108 @@
-.heading-blue{
-    border-bottom: 2px #3E72B899 solid;
-    height: 20px;
-//     background: #3E72B899 0% 0% no-repeat padding-box;
-// opacity: 1;
+// .heading-blue{
+//     border-bottom: 2px #3E72B899 solid;
+//     height: 20px;
+// //     background: #3E72B899 0% 0% no-repeat padding-box;
+// // opacity: 1;
+// }
+
+#card1{
+    background-image: url(assets/img/hug.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+   
+}
+#card2{
+    background-image: url(assets/img/holy.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+   
 }
 
-section{
-    padding: 40px 0px;
+#card3{
+    background-image: url(assets/img/bride.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+   
 }
+
+#card4{
+    background-image: url(assets/img/christ.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+   
+}
+.layer {
+    background-color:  rgb(0 0 0 / 52%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+}
+
+.card-body{
+    position: relative;
+    z-index: 10;
+}
+
+.card-body > .fa{
+    color: #ffffff !important;
+    font-size: 25px;
+}
+
+.card-titles{
+    color: #ffffff;
+    font-weight: 700;
+    position: relative;
+    z-index: 10;
+    margin-top: 5em !important;
+}
+
+.card-text-hide{
+    display: none;
+    font-size: 14px;
+}
+
+div{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.bg-grey{
+    background-color: #F3F5F7;
+}
+h4{
+    font-size: 40px !important;
+}
+
+.but{
+    //  height: 50px;
+}
+
+.header-but{
+    background-color: #ffffff;
+}
+
+.but> a{
+    box-shadow: 0px 3px 6px #00000029;
+    padding: 10px 10px 10px 10px;
+    color: #222 !important;
+    background-color: #ffffff;
+}
+
+#app{
+    position: relative;
+    top: 90px;
+}
+
+// section{
+//     padding: 40px 0px;
+// }
