--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,18 +1,53 @@
 <footer class="footer">
+    <div class="container-fluid" style="background-color: #343538; padding-top: 40px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <h5>RESOURCES</h5>
+                    <ul>
+                        <li>eNewsletter</li>
+                        <li>Blog</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul>
+                        <li>What we are about</li>
+                        <li>Vision, Missions and Aims</li>
+                        <li>Founders</li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul>
+                        <li>Lapis LM Radio</li>
+                        <li>Women Minsitry</li>
+                        <li>Founders</li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>Subscribe to our newsletter.</h5>
+                    <input type="text" name="" id=""> <br>
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
+
         <div class="row">
-            <nav class="footer-nav">
+            <!-- <nav class="footer-nav">
                 <ul>
                     <li><a href="https://www.creative-tim.com">Creative Tim</a></li>
                     <li><a href="http://blog.creative-tim.com">Blog</a></li>
                     <li><a href="https://www.creative-tim.com/license">Licenses</a></li>
                 </ul>
-            </nav>
-            <div class="credits ml-auto">
-                <span class="copyright">
-                    © {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by Creative Tim
-                </span>
+            </nav> -->
+            <div class="col-md-12">
+                <p class="text-center">
+                    © {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> LAPIS LAZULI MINISTRIES
+                </p>
             </div>
+            
         </div>
     </div>
 </footer>
