--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -27,13 +27,14 @@
               </li>
               <li class="nav-item" *ngIf="!isDocumentation()">
                   <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.github.com/CreativeTimOfficial/paper-kit-2-angular" target="_blank">
-                      <i class="fa fa-github"></i>
-                      <p class="d-lg-none">GitHub</p>
+                      LAPIS LM RADIO
                   </a>
               </li>
               <li class="nav-item" *ngIf="!isDocumentation()">
-                  <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i> Documentation</a>
-              </li>
+                <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.github.com/CreativeTimOfficial/paper-kit-2-angular" target="_blank">
+                    CONTACT US
+                </a>
+            </li>
               <li class="nav-item" *ngIf="isHome()">
                   <a href="https://www.creative-tim.com/product/paper-kit-2-pro-angular?ref=pk2-angular-free-local" target="_blank" class="btn btn-danger btn-round">Upgrade to Pro</a>
               </li>
