--- a/src/assets/sass/paper-kit/_typography.scss
+++ b/src/assets/sass/paper-kit/_typography.scss
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@500&family=Rubik&display=swap');
 /*           Font Smoothing      */
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, a, .td-name, td, button, input, select, textarea{
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: $font-family-sans-serif;
+   
     font-weight: $font-weight-light;
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4{
     margin: $margin-large-vertical 0 0;
+    font-family:  'Roboto', sans-serif ;
 }
 h1, .h1 {
     font-size: $font-size-h1;
@@ -38,6 +40,8 @@ p{
     font-size: $font-paragraph;
     line-height: $line-height-general;
     margin-bottom: 5px;
+    font-weight: 300;
+    font-family: 'Rubik', sans-serif;
 }
 
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small, h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small, .h1 .small, .h2 .small, .h3 .small, .h4 .small, .h5 .small, .h6 .small {
