--- a/src/assets/sass/paper-kit/_typography.scss
+++ b/src/assets/sass/paper-kit/_typography.scss
@@ -37,10 +37,10 @@ h6, .h6{
     line-height: 1.5em;
 }
 p{
-    font-size: $font-paragraph;
+    font-size: 16px !important;
     line-height: $line-height-general;
     margin-bottom: 5px;
-    font-weight: 300;
+    font-weight: 200;
     font-family: 'Rubik', sans-serif;
 }
 
@@ -60,7 +60,7 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 .footer-big h5,
 .footer-big h4,
 .media .media-heading{
-    font-family: $font-family-sans-serif;;
+     font-family:  'Roboto', sans-serif ;
 
     &,
     a{
