--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,12 +11,12 @@
       <div class="navbar-collapse" id="navbarToggler">
           <ul class="navbar-nav ml-auto">
               <li class="nav-item" *ngIf="!isDocumentation()">
-                  <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
+                  <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="/" target="_blank">
                     HOME
                   </a>
               </li>
-              <li class="nav-item" *ngIf="!isDocumentation()">
-                  <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
+              <li class="nav-item">
+                  <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="/#/about">
                      ABOUT US
                   </a>
               </li>
