contact us page

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,15 +1,46 @@
-<div class="container-fluid" id="contactg-us">
+<div class="container-fluid" id="about-us">
+    <h2 class="text-center" style="color: #fff;">Contact Us</h2>
+    <h5 class="text-center" style="color: #fff;">We’d love to help get you connected to one of our locations, a small group, or a volunteer opportunity. <br> Feel free to fill out the contact form to receive a reply, or contact us via phone.</h5>
+
+
+    
+<div class="container mt-4">
     <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-8" id="">
-            <div class="" id="about-preview">
-                <h5 class="mb-2">About Lapis Lazuli Ministries</h5>
-                <h2 style="color: #3E72B8;">WHAT WE ARE ABOUT </h2>
-                <p>Lapis is the Latin word for Stone, and Lazuli is from the Arabic word Azula. This precious blue gem stone with golden inclusions of Pyrites, is said to have come out of Middle East history, and is said to be found in few deposits around the world. The ancients associated this stone with friendship and truth which are such a foundational and integral part of Our Lord.</p>
-                <p>This foundational stone is referred to in a number of places in the Bible. In some texts it is referred to as Sapphires. It is first mentioned in Exodus 24v9-10 where it is described as the pavement under Our Lords Feet and it is also referred to in Exodus 28v15-21, as the stone on which God wrote the Ten Commandments. We also find reference to it in Ezekiel 1v25-28 where it is referred to as the foundation of the Throne in heaven. Song of Solomon 5v14 describes His body like polished Ivory decorated with Lapis Lazuli. The foundation of wisdom as described in Job 28v1-11 also makes reference to this. The last book in the Bible, Revelation refers to the stone in Revelation 21v19. It is referred to here as being used in the foundation of His dwelling – The Holy City.</p>
-                <p>Lapis Lazuli ministry is a vessel that seeks to carry these foundational truths out into the four corners of the world. It restores lives by reconnecting hearts back to the extravagant love of The Father, raising up generations by repairing faulty foundations, uniting churches and ministries, by breaking down walls and celebrating all that unite, and in this way, impact the spiritual state of Nations.</p>
+        <div class="col-md-6 shadow p-5 mb-5 bg-white rounded">
+            <div>
+                <form>
+                    <div class="row mb-4">
+                      <div class="col">
+                          <label for="">First name</label>
+                        <input type="text" class="form-control" placeholder="First name">
+                      </div>
+                      <div class="col">
+                          <label for="">Last name</label>
+                        <input type="text" class="form-control" placeholder="Last name">
+                      </div>
+                    </div>
+                    <div class="row mb-4">
+                        <div class="col">
+                            <label for="">Email</label>
+                          <input type="email" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="col">
+                            <label for="">Phone</label>
+                          <input type="text" class="form-control" placeholder="Phone">
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                            <label for="">Message:</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                      </div>
+                  </form>
             </div>
         </div>
+        <div class="col-md-6" id="">
+           
+        </div>
     </div>
-
+</div>
 </div>
