contact us page

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,12 +1,16 @@
-<div class="container-fluid" id="about-us">
-    <h2 class="text-center" style="color: #fff;">Contact Us</h2>
-    <h5 class="text-center" style="color: #fff;">We’d love to help get you connected to one of our locations, a small group, or a volunteer opportunity. <br> Feel free to fill out the contact form to receive a reply, or contact us via phone.</h5>
+<div class="container-fluid p-5" id="about-us">
+    <div class="layer">
+    </div>
+    <div id="testy">
+        <h2 class="text-center" style="color: #fff;">Contact Us</h2>
+        <h5 class="text-center" style="color: #fff;">We’d love to help get you connected to one of our locations, a small group, or a volunteer opportunity. <br> Feel free to fill out the contact form to receive a reply, or contact us via phone.</h5>
+    </div>
 
 
     
 <div class="container mt-4">
     <div class="row">
-        <div class="col-md-6 shadow p-5 mb-5 bg-white rounded">
+        <div class="col-md-6 shadow p-5 mb-5 bg-white rounded" >
             <div>
                 <form>
                     <div class="row mb-4">
@@ -38,8 +42,17 @@
                   </form>
             </div>
         </div>
-        <div class="col-md-6" id="">
-           
+        <div class="col-md-6 p-4" id="">
+           <h5 style="color: #fff;">Contact Details</h5>
+           <p><strong>Phone: </strong>+234 703 437 1401 <br>
+            +234 906 390 1916 <br>
+            (+44)7904 125 631</p>
+            <br>
+            <p><strong>Address:</strong> 10A Norman Williams Street,<br>
+                off Keffi Street, Ikoyi,<br>
+                Lagos, Nigeria.</p>
+                <p><strong>Office hours:</strong> Monday – Friday.   9am-4pm.</p>
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3964.6234975315106!2d3.416015!3d6.442368!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b2bb9ea32f3%3A0xcf201a5de6e09d9!2s10%20Norman%20Williams%20St%2C%20Ikoyi%2C%20Lagos!5e0!3m2!1sen!2sng!4v1599586836043!5m2!1sen!2sng" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
         </div>
     </div>
 </div>
