--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -13,7 +13,26 @@
     background-repeat: no-repeat; 
     background-size: cover;  
     background-position: center;  
-    /* filter: grayscale(100%); */
+    /* filter: grayscale(80%); */
     height: 700px;
     background-attachment: fixed;
+}
+
+p{
+    color: #ffffff !important;
+}
+
+#testy{
+    position: relative;
+    z-index: 5;
+}
+
+.layer {
+    background-color:  rgb(0 0 0 / 52%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
 }
