--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -25,13 +25,13 @@
                      EVENTS
                   </a>
               </li>
-              <li class="nav-item" *ngIf="!isDocumentation()">
-                  <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.github.com/CreativeTimOfficial/paper-kit-2-angular" target="_blank">
+              <li class="nav-item">
+                  <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://lapislmradio.org/" target="_blank">
                       LAPIS LM RADIO
                   </a>
               </li>
               <li class="nav-item" *ngIf="!isDocumentation()">
-                <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="/#/contact" target="_blank">
+                <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="/#/contact" target="_blank">
                     CONTACT US
                 </a>
             </li>
