--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,3 +1,15 @@
+<!-- <ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner> -->
+<!-- <ngx-spinnerbdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner> -->
+
+
+
 <div class="wrapper">
     <div class="page-header" style="background-image: url('./assets/img/login-image.jpg');">
         <div class="filter"></div>
@@ -5,19 +17,28 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                       <div class="card card-register">
-                          <h3 class="title">Welcome</h3>
-                          <div class="social-line text-center">
-                              <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
-                                  <i class="fa fa-facebook-square"></i>
-                              </a>
-                              <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
-                                  <i class="fa fa-google-plus"></i>
-                              </a>
-                              <a href="#pablo" class="btn btn-neutral btn-twitter btn-just-icon">
-                                  <i class="fa fa-twitter"></i>
-                              </a>
-                          </div>
-                          <form class="register-form">
+                          <h6 class="title">We are happy to have you!</h6>
+                          <form class="register-form"  [formGroup]="register_form"  (ngSubmit)="register(register_form.value)">
+                              <label for="name">Name</label>
+                              <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text">
+                                      <i class="nc-icon nc-person-85"></i>
+                                  </span>
+                                </div>
+
+                                  <input type="text" class="form-control" formControlName="name" placeholder="Enter Name" (focus)="focus=true" (blur)="focus=false" >
+                              </div>
+                              <label for="">Username</label>
+                              <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text">
+                                      <i class="nc-icon nc-person-85"></i>
+                                  </span>
+                                </div>
+
+                                  <input type="text" class="form-control" formControlName="username" placeholder="Enter Username" (focus)="focus=true" (blur)="focus=false" >
+                              </div>
                               <label>Email</label>
                               <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
                                 <div class="input-group-prepend">
@@ -26,9 +47,25 @@
                                   </span>
                                 </div>
 
-                                  <input type="text" class="form-control" placeholder="Email" (focus)="focus=true" (blur)="focus=false" >
+                                  <input type="text" class="form-control" placeholder="Email" formControlName="email" (focus)="focus=true" (blur)="focus=false" >
                               </div>
+                              <label for="">Phone</label>
+                              <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text">
+                                      <i class="nc-icon nc-email-85"></i>
+                                  </span>
+                                </div>
 
+                                  <input type="tel" class="form-control" placeholder="+234" formControlName="phone" (focus)="focus=true" (blur)="focus=false" >
+                              </div>
+                              <div class="validation-errors">
+                                <ng-container *ngFor="let validation of validation_messages.phone">
+                                  <div class="error-message" *ngIf="register_form.get('phone').hasError(validation.type) && (register_form.get('phone').dirty || register_form.get('phone').touched)">
+                                    {{ validation.message }}
+                                  </div>
+                                </ng-container>
+                              </div>
                               <label>Password</label>
                               <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
                                 <div class="input-group-prepend">
@@ -36,18 +73,37 @@
                                       <i class="nc-icon nc-key-25"></i>
                                   </span>
                                 </div>
-                                  <input type="text" class="form-control" placeholder="Password" (focus)="focus1=true" (blur)="focus1=false" >
+                                  <input type="text" class="form-control" formControlName="password" placeholder="Password" (focus)="focus1=true" (blur)="focus1=false" >
                               </div>
-                              <button class="btn btn-danger btn-block btn-round">Register</button>
-                          </form>
-                          <div class="forgot">
-                              <a href="#" class="btn btn-link btn-danger">Forgot password?</a>
-                          </div>
+                              <div class="validation-errors">
+                                <ng-container *ngFor="let validation of validation_messages.password">
+                                  <div class="error-message" *ngIf="register_form.get('password').hasError(validation.type) && (register_form.get('password').dirty || register_form.get('password').touched)">
+                                    {{ validation.message }}
+                                  </div>
+                                </ng-container>
+                              </div>
+                              <label for="">Retype Password</label>
+                              <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text">
+                                      <i class="nc-icon nc-key-25"></i>
+                                  </span>
+                                </div>
+                                  <input type="text" class="form-control" (ionChange)="checkPassword()" placeholder="**********" type="password"
+                                  formControlName="password_confirmation" (focus)="focus1=true" (blur)="focus1=false" >
+                              </div>
+                              <div *ngIf="!passwordMatch && !register_form.controls.password.invalid" class="validation-errors">
+                                <p>Password is mismatch</p>
+                              </div>
+                              <button class="btn btn-danger btn-block btn-round" type="submit">Register</button>
+                              <!-- <button  size="xsmall"   (click)="showSpinner('sp5')">Show</button>
+                              <button  size="xsmall"   (click)="hideSpinner('sp5')">Hide</button>
+                              
+                                <ngx-spinner name="sp5" [fullScreen]="false" type="square-jelly-box" size="medium"></ngx-spinner> -->
+                              
+                            </form>
                       </div>
                     </div>
-                </div>
-                <div class="footer register-footer text-center">
-                    <h6>&copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by Creative Tim</h6>
                 </div>
             </div>
     </div>
