--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -27,10 +27,10 @@
                                       <input type="text" class="form-control" formControlName="password" placeholder="Password" (focus)="focus1=true" (blur)="focus1=false" >
                                   </div>
                                   <button class="btn btn-danger btn-block btn-round" type="submit">Login</button>
-                                  <!-- <button  size="xsmall"   (click)="showSpinner('sp5')">Show</button>
+                                 <button  size="xsmall"   (click)="showSpinner()">Show</button>
                                   <button  size="xsmall"   (click)="hideSpinner('sp5')">Hide</button>
                                   
-                                    <ngx-spinner name="sp5" [fullScreen]="false" type="square-jelly-box" size="medium"></ngx-spinner> -->
+                                    <ngx-spinner name="sp5" [fullScreen]="false" type="square-jelly-box" size="medium"></ngx-spinner> 
                                   
                                 </form>
                               <div class="forgot">
@@ -43,3 +43,4 @@
         </div>
     </div>
     
+    <ngx-spinner></ngx-spinner>
