--- a/src/app/admin/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/admin/dashboard/dashboard.component.html
@@ -1,1 +1,148 @@
-<p>dashboard works!</p>
+<div class="wrapper">
+    <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('./assets/img/fabio-mangione.jpg');">
+        <div class="filter"></div>
+    </div>
+    <div class="section profile-content">
+            <div class="divs bg-grey">
+                <div class="container">
+                    <div class="owner">
+                        <div class="avatar">
+                            <img src="./assets/img/fabio-mangione.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                        </div>
+                        <div class="name">
+                            <h4 class="title">Admin Dashboard<br /></h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6">
+          
+                         <div class="container-fluid">
+                          <div class="row">
+                              <div class="col-md-6">
+                                  <a routerLink="/admin/event" style="cursor: poiner;">
+                                  <div class="card" id="card1" style="width: 15rem; height: 15rem;">
+                                      <div class="layer">
+                                      </div>
+                                  <div class="card-body">
+                                      <i class="fa fa-heart"></i>
+                                    <h5 class="card-titles">Events</h5>
+                                   
+                                    <p class="card-text-hide">Event Management Module.</p>
+                                  </div>
+                                </div>
+                               </a>
+                              </div>
+                              <div class="col-md-6">
+                                <a routerLink="/admin/prayer" style="cursor: poiner;">
+                                  <div class="card" id="card2" style="width: 15rem; height: 15rem;">
+                                      <div class="layer">
+                                      </div>
+                                  <div class="card-body">
+                                      <i class="fa fa-book"></i>
+                                    <h5 class="card-titles">Prayers</h5>
+                                   
+                                    <p class="card-text-hide">Prayers Management Module.</p>
+                                  </div>
+                                  </div>
+                                </a>
+                              </div>
+                          </div>
+                          <div class="row">
+                              <div class="col-md-6">
+                                <a routerLink="/admin/user" style="cursor: poiner;">
+                                  <div class="card" id="card3" style="width: 15rem; height: 15rem;">
+                                      <div class="layer">
+                                      </div>
+                                  <div class="card-body">
+                                      <i class="fa fa-heart"></i>
+                                    <h5 class="card-titles">Users</h5>
+                                   
+                                    <p class="card-text-hide">Users Management Module.</p>
+                                  </div>
+                                </div>
+                                </a>
+                              </div>
+                              <div class="col-md-6">
+                                  <div class="card" id="card4" style="width: 15rem; height: 15rem;">
+                                      <div class="layer">
+                                      </div>
+                                  <div class="card-body">
+                                      <i class="fa fa-book"></i>
+                                    <h5 class="card-titles">SHARING JESUS</h5>
+                                   
+                                    <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+                                  </div>
+                                </div>
+                              </div>
+                          </div>
+                         </div>
+          
+                      </div>
+                      <div class="col-md-6">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <a routerLink="/admin/testimony" style="cursor: poiner;">
+                                     <div class="card" id="card1" style="width: 15rem; height: 15rem;">
+                                        <div class="layer">
+                                        </div>
+                                    <div class="card-body">
+                                        <i class="fa fa-heart"></i>
+                                      <h5 class="card-titles">Testimonies</h5>
+                                     
+                                      <p class="card-text-hide">Testimonies Management Module</p>
+                                    </div>
+                                     </div>
+                                    </a>
+                                </div>
+                                <div class="col-md-6">
+                                    <a routerLink="/admin/message" style="cursor: poiner;">
+                                    <div class="card" id="card2" style="width: 15rem; height: 15rem;">
+                                        <div class="layer">
+                                        </div>
+                                    <div class="card-body">
+                                        <i class="fa fa-book"></i>
+                                      <h5 class="card-titles">Messages</h5>
+                                     
+                                      <p class="card-text-hide">Messages Management Module.</p>
+                                    </div>
+                                    </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <!-- <a routerLink="/admin/resources" style="cursor: poiner;"> -->
+                                    <div class="card" id="card3" style="width: 15rem; height: 15rem;">
+                                        <div class="layer">
+                                        </div>
+                                    <div class="card-body">
+                                        <i class="fa fa-heart"></i>
+                                      <h5 class="card-titles">Resources</h5>
+                                     
+                                      <p class="card-text-hide">Resources Management Module.</p>
+                                    </div>
+                                     </div>
+                                  <!-- </a> -->
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="card" id="card4" style="width: 15rem; height: 15rem;">
+                                        <div class="layer">
+                                        </div>
+                                    <div class="card-body">
+                                        <i class="fa fa-book"></i>
+                                      <h5 class="card-titles">SHARING JESUS</h5>
+                                     
+                                      <p class="card-text-hide">Responding to God’s extravagant Love by loving God with all my heart, soul, strength and mind.</p>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                           </div>
+                      </div>
+          
+                    </div>
+                </div>
+            </div>
+    </div>
+</div>
