--- a/src/app/admin/admin/event/event-detail/event-detail.component.html
+++ b/src/app/admin/admin/event/event-detail/event-detail.component.html
@@ -1,1 +1,5 @@
-<p>event-detail works!</p>
+<!-- <p>{{eventInfo?.id}}</p> -->
+<p>{{eventInfo?.title}}</p>
+<p>{{eventInfo?.description}}</p>
+<p>{{eventInfo?.details}}</p>
+<p><img src="{{eventInfo?.banner}}" alt=""></p>
