--- a/src/app/admin/admin/event/add-event/add-event.component.html
+++ b/src/app/admin/admin/event/add-event/add-event.component.html
@@ -1,1 +1,31 @@
-<p>add-event works!</p>
+<div class="modal-header">
+    <h5 class="modal-title text-center">Event Creation</h5>
+    <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+    <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+<div class="modal-body">
+    <form [formGroup]="eventForm"  >
+      <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+              <input type="text" class="form-control" formControlName="title" placeholder="Enter Event Title"  (focus)="focus=true" (blur)="focus=false" >
+      </div>
+      <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+            <input type="file" class="form-control"  (change)="onFileChange($event)" id="banner"  (focus)="focus=true" (blur)="focus=false" >
+      </div>
+      <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+        <input type="text" class="form-control" formControlName="description" placeholder="Short Description About Event"   (focus)="focus=true" (blur)="focus=false" >
+      </div>
+        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+          <textarea name="" id="" cols="20" rows="10" formControlName="details" (focus)="focus=true" (blur)="focus=false" class="form-control"></textarea>
+        </div>
+        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+            <input type="date" class="form-control"  formControlName="event_date"  (focus)="focus=true" (blur)="focus=false" >
+          </div>
+    </form>
+</div>
+<div class="modal-footer">
+   <div class="divider"></div>
+    <div class="right-side">
+        <button type="submit" class="btn btn-outline-danger btn-round" (click)="create()" >Save</button>
+    </div>
+</div>
