--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -85,6 +85,7 @@ h4{
 
 .but{
     //  height: 50px;
+    margin-top: 20px;
 }
 
 .header-but{
@@ -93,9 +94,10 @@ h4{
 
 .but> a{
     box-shadow: 0px 3px 6px #00000029;
-    padding: 10px 10px 10px 10px;
+    padding: 20px 10px 20px 10px;
     color: #222 !important;
     background-color: #ffffff;
+    margin-top: 12px; 
 }
 
 #app{
